--- a/app/Resources/views/site/produtos/index.html.twig
+++ b/app/Resources/views/site/produtos/index.html.twig
@@ -39,7 +39,7 @@
     <div class="fusection9" style="padding: 60px 0px 20px 0px">
         <div class="container">
             <h5>
-                <a href="#" class="readmore_but9 animate zoomIn" data-anim-type="zoomIn" data-anim-delay="750">
+                <a href="{{ path('site_experimente') }}" class="readmore_but9 animate zoomIn" data-anim-type="zoomIn" data-anim-delay="750">
                     <i class="fa fa-check"></i> <strong>EXPERIMENTE GRÁTIS</strong>
                 </a>
             </h5>
@@ -406,7 +406,7 @@
     <div class="fusection9" style="padding: 60px 0px 30px 0px">
         <div class="container">
             <h5>
-                <a href="#" class="readmore_but9 animate zoomIn" data-anim-type="zoomIn" data-anim-delay="750">
+                <a href="{{ path('site_experimente') }}" class="readmore_but9 animate zoomIn" data-anim-type="zoomIn" data-anim-delay="750">
                     <i class="fa fa-check"></i> <strong>EXPERIMENTE GRÁTIS</strong>
                 </a>
             </h5>
