--- a/app/Resources/views/admin/_partials/_block_stylesheets.html.twig
+++ b/app/Resources/views/admin/_partials/_block_stylesheets.html.twig
@@ -1,5 +1,5 @@
 <!-- BEGIN GLOBAL MANDATORY STYLES -->
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet"
       type="text/css"/>
 <link href="{{ asset('bower_components/components-font-awesome/css/font-awesome.min.css') }}" rel="stylesheet"
       type="text/css"/>
