--- a/app/Resources/views/site/portal/_partials/_sidebar.html.twig
+++ b/app/Resources/views/site/portal/_partials/_sidebar.html.twig
@@ -15,6 +15,11 @@
                 </a>
             </li>
             <li>
+                <a href="{{ path('site_portal_treinamentos') }}">
+                    <i class="fa fa-angle-right"></i> Treinamentos
+                </a>
+            </li>
+            <li>
                 <a href="{{ path('site_change_password') }}">
                     <i class="fa fa-angle-right"></i> Alterar Senha
                 </a>
