--- a/app/Resources/views/site/homepage/index.html.twig
+++ b/app/Resources/views/site/homepage/index.html.twig
@@ -117,8 +117,8 @@
                 compromisso!
             </h4>
             <br>
-            <a href="{{ path('site_experimente') }}" class="readmore_but9 animate zoomIn" data-anim-type="zoomIn" data-anim-delay="750">
-                <i class="fa fa-check"></i> <strong>SOLICITAR ANÁLISE</strong>
+            <a href="{{ path('site_contato') }}" class="readmore_but9 animate zoomIn" data-anim-type="zoomIn" data-anim-delay="750">
+                <i class="fa fa-check"></i> <strong>ENTRE EM CONTATO</strong>
             </a> &nbsp;&nbsp;&nbsp;
 
         </div>
