--- a/app/Resources/views/site/produtos/index.html.twig
+++ b/app/Resources/views/site/produtos/index.html.twig
@@ -39,8 +39,8 @@
     <div class="fusection9" style="padding: 60px 0px 20px 0px">
         <div class="container">
             <h5>
-                <a href="{{ path('site_experimente') }}" class="readmore_but9 animate zoomIn" data-anim-type="zoomIn" data-anim-delay="750">
-                    <i class="fa fa-check"></i> <strong>EXPERIMENTE GRÁTIS</strong>
+                <a href="{{ path('site_contato') }}" class="readmore_but9 animate zoomIn" data-anim-type="zoomIn" data-anim-delay="750">
+                    <i class="fa fa-check"></i> <strong>ENTRE EM CONTATO</strong>
                 </a>
             </h5>
         </div>
@@ -135,6 +135,10 @@
                     <li><i class="fa fa-chevron-circle-right"></i> E-mail Automático</li>
                     <li><i class="fa fa-chevron-circle-right"></i> Carta de Correção / Cancelamento / Inutilização
                     </li>
+                    <li><i class="fa fa-chevron-circle-right"></i> NF-e (Nota Fiscal Eletrônica)</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> NFC-e (Nota Fiscal Consumidor Eletrônica)</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> CT-e (Conhecimento Transporte Eletrônico)</li>
+                    <li><i class="fa fa-chevron-circle-right"></i> MDF-e (Manifesto Eletrônico de Documentos)</li>
                 </ul>
             </div>
             <div class="clearfix"></div>
@@ -406,8 +410,8 @@
     <div class="fusection9" style="padding: 60px 0px 30px 0px">
         <div class="container">
             <h5>
-                <a href="{{ path('site_experimente') }}" class="readmore_but9 animate zoomIn" data-anim-type="zoomIn" data-anim-delay="750">
-                    <i class="fa fa-check"></i> <strong>EXPERIMENTE GRÁTIS</strong>
+                <a href="{{ path('site_contato') }}" class="readmore_but9 animate zoomIn" data-anim-type="zoomIn" data-anim-delay="750">
+                    <i class="fa fa-check"></i> <strong>ENTRE EM CONTATO</strong>
                 </a>
             </h5>
         </div>
